[gd_scene load_steps=18 format=4 uid="uid://bmbqpln4e8x36"]

[ext_resource type="Script" path="res://scripts/game/biome_1_boss_arena_world.gd" id="1_s5bqf"]
[ext_resource type="Script" uid="uid://dkhpifov51nlj" path="res://scripts/game/datatype (tuple)/spawn_result.gd" id="2_ek4x0"]
[ext_resource type="Material" uid="uid://qdsmfsfd8nn3" path="res://resources/snow_shader.tres" id="3_qt5jd"]
[ext_resource type="TileSet" uid="uid://mux80ftnsjv2" path="res://resources/base_tiles.tres" id="4_qlxro"]
[ext_resource type="TileSet" uid="uid://bam1ln05uasgr" path="res://resources/base_tiles_overlay.tres" id="5_un4pn"]
[ext_resource type="TileSet" uid="uid://1ssn02ckky52" path="res://resources/object_tiles.tres" id="6_kxf7d"]
[ext_resource type="TileSet" uid="uid://dajfu3xxtbwkt" path="res://resources/upper_tiles.tres" id="7_8rs3m"]
[ext_resource type="Texture2D" uid="uid://bgxmi2iptslmc" path="res://assets/markers/entrance_marker1.png" id="8_8567w"]
[ext_resource type="Texture2D" uid="uid://dwk6kqb0y58h2" path="res://assets/markers/entrance_marker2.png" id="9_2nrtd"]
[ext_resource type="Texture2D" uid="uid://b8nfrjoyq81dj" path="res://assets/markers/exit_marker2.png" id="10_s5bqf"]
[ext_resource type="Script" uid="uid://bd6hadag7ntp1" path="res://scripts/game/arena_box.gd" id="11_2nrtd"]
[ext_resource type="Texture2D" uid="uid://bl6albrk3qb6u" path="res://assets/markers/exit_marker1.png" id="11_r0mky"]
[ext_resource type="PackedScene" uid="uid://dx1tak6174afo" path="res://scenes/game/ice_torch.tscn" id="13_n3s17"]

[sub_resource type="Resource" id="Resource_0ihr6"]
script = ExtResource("2_ek4x0")
scene_path = 4
spawnpoint_index = 1
metadata/_custom_type_script = "uid://dkhpifov51nlj"

[sub_resource type="Resource" id="Resource_gx3pl"]
script = ExtResource("2_ek4x0")
scene_path = 5
metadata/_custom_type_script = "uid://dkhpifov51nlj"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h04wm"]
size = Vector2(20, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx3pl"]
size = Vector2(342, 231)

[node name="world2" type="Node2D" node_paths=PackedStringArray("undefeated_upper", "defeated_upper", "arena_box", "spawnpoints", "exitpoint_to_scenepath", "base_tile", "overlay_tile")]
script = ExtResource("1_s5bqf")
undefeated_upper = NodePath("undefeated_upper")
defeated_upper = NodePath("defeated_upper")
arena_box = NodePath("arena_box")
spawnpoints = [NodePath("spawnpoint"), NodePath("spawnpoint2")]
exitpoint_to_scenepath = {
NodePath("exitpoint"): SubResource("Resource_0ihr6"),
NodePath("exitpoint2"): SubResource("Resource_gx3pl")
}
base_tile = NodePath("base")
overlay_tile = NodePath("baseOverlay")
metadata/_custom_type_script = "uid://djhd4y8rg754v"

[node name="base" type="TileMapLayer" parent="."]
material = ExtResource("3_qt5jd")
tile_map_data = PackedByteArray("AAAPAAAAAQACAAEAAAAPAAEAAQACAAEAAAAPAAIAAQACAAEAAAAPAAMAAQACAAEAAAAPAAQAAQACAAEAAAAPAAUAAQACAAEAAAAPAAYAAQACAAEAAAAPAAcAAQACAAEAAAAPAAgAAQACAAEAAAAPAAkAAQACAAEAAAAPAAoAAQACAAEAAAAQAAkAAQACAAEAAAAQAAoAAQACAAEAAAARAAoAAQACAAEAAAASAAoAAQACAAEAAAATAAoAAQACAAEAAAAUAAoAAQACAAEAAAAVAAoAAQACAAEAAAAWAAoAAQACAAEAAAAYAAoAAQACAAEAAAAZAAoAAQACAAEAAAAaAAoAAQACAAEAAAAbAAoAAQACAAEAAAAcAAoAAQACAAEAAAAXAAoAAQACAAEAAAAPAP//AQACAAEAAAAfAAoAAQACAAEAAAAgAAoAAQACAAEAAAAhAAoAAQACAAEAAAAiAAoAAQACAAEAAAAjAAoAAQACAAEAAAAkAAoAAQACAAEAAAAlAAQAAQACAAEAAAAlAAUAAQACAAEAAAAlAAYAAQACAAEAAAAlAAcAAQACAAEAAAAlAAgAAQACAAEAAAAlAAkAAQACAAEAAAAlAAoAAQACAAEAAAAlAAAAAQACAAEAAAAlAAEAAQACAAEAAAAlAAIAAQACAAEAAAAlAAMAAQACAAEAAAAmAAAAAQACAAEAAAAmAAEAAQACAAEAAAAmAAIAAQACAAEAAAAmAAMAAQACAAEAAAAmAAQAAQACAAEAAAAnAAAAAQACAAEAAAAnAAEAAQACAAEAAAAnAAIAAQACAAEAAAAnAAMAAQACAAEAAAAnAAQAAQACAAEAAAAoAAAAAQACAAEAAAAoAAEAAQACAAEAAAAoAAIAAQACAAEAAAAoAAMAAQACAAEAAAAoAAQAAQACAAEAAAAmAAUAAQACAAEAAAAmAAYAAQACAAEAAAAnAAUAAQACAAEAAAAnAAYAAQACAAEAAAAoAAUAAQACAAEAAAAoAAYAAQACAAEAAAAlAP//AQACAAEAAAAmAP//AQACAAEAAAAnAP//AQACAAEAAAAoAP//AQACAAEAAAAPAPr/AQACAAEAAAAPAPv/AQACAAEAAAAPAPz/AQACAAEAAAAPAP3/AQACAAEAAAAPAP7/AQACAAEAAAAQAPr/AQACAAEAAAAQAPv/AQACAAEAAAAQAPz/AQACAAEAAAAQAP3/AQACAAEAAAARAPr/AQACAAEAAAARAPv/AQACAAEAAAARAPz/AQACAAEAAAARAP3/AQACAAEAAAASAPr/AQACAAEAAAASAPv/AQACAAEAAAASAPz/AQACAAEAAAASAP3/AQACAAEAAAATAPr/AQACAAEAAAATAPv/AQACAAEAAAATAPz/AQACAAEAAAATAP3/AQACAAEAAAAlAPr/AQACAAEAAAAlAPv/AQACAAEAAAAlAPz/AQACAAEAAAAlAP3/AQACAAEAAAAlAP7/AQACAAEAAAAdAAoAAQACAAEAAAAeAAoAAQACAAEAAAAUAPr/AQACAAEAAAAUAPv/AQACAAEAAAAUAPz/AQACAAEAAAAUAP3/AQACAAEAAAAVAPr/AQACAAEAAAAVAPv/AQACAAEAAAAVAPz/AQACAAEAAAAVAP3/AQACAAEAAAAWAPr/AQACAAEAAAAWAPv/AQACAAEAAAAWAPz/AQACAAEAAAAWAP3/AQACAAEAAAAXAPr/AQACAAEAAAAXAPv/AQACAAEAAAAXAPz/AQACAAEAAAAXAP3/AQACAAEAAAAYAPr/AQACAAEAAAAYAPv/AQACAAEAAAAYAPz/AQACAAEAAAAYAP3/AQACAAEAAAAZAPr/AQACAAEAAAAZAPv/AQACAAEAAAAZAPz/AQACAAEAAAAZAP3/AQACAAEAAAAaAPr/AQACAAEAAAAaAPv/AQACAAEAAAAaAPz/AQACAAEAAAAaAP3/AQACAAEAAAAbAPr/AQACAAEAAAAbAPv/AQACAAEAAAAbAPz/AQACAAEAAAAbAP3/AQACAAEAAAAcAPr/AQACAAEAAAAcAPv/AQACAAEAAAAcAPz/AQACAAEAAAAcAP3/AQACAAEAAAAdAPr/AQACAAEAAAAdAPv/AQACAAEAAAAdAPz/AQACAAEAAAAdAP3/AQACAAEAAAAeAPr/AQACAAEAAAAeAPv/AQACAAEAAAAeAPz/AQACAAEAAAAeAP3/AQACAAEAAAAfAPr/AQACAAEAAAAfAPv/AQACAAEAAAAfAPz/AQACAAEAAAAfAP3/AQACAAEAAAAgAPr/AQACAAEAAAAgAPv/AQACAAEAAAAgAPz/AQACAAEAAAAgAP3/AQACAAEAAAAhAPr/AQACAAEAAAAhAPv/AQACAAEAAAAhAPz/AQACAAEAAAAhAP3/AQACAAEAAAAiAPr/AQACAAEAAAAiAPv/AQACAAEAAAAiAPz/AQACAAEAAAAiAP3/AQACAAEAAAAjAPr/AQACAAEAAAAjAPv/AQACAAEAAAAjAPz/AQACAAEAAAAjAP3/AQACAAEAAAAkAPr/AQACAAEAAAAkAPv/AQACAAEAAAAkAPz/AQACAAEAAAAkAP3/AQACAAEAAAARAAkAAQACAAEAAAASAAkAAQACAAEAAAATAAkAAQACAAEAAAAUAAkAAQACAAEAAAAVAAkAAQACAAEAAAAWAAkAAQACAAEAAAAXAAkAAQACAAEAAAAYAAkAAQACAAEAAAAZAAkAAQACAAEAAAAaAAkAAQACAAEAAAAbAAkAAQACAAEAAAAcAAkAAQACAAEAAAAdAAkAAQACAAEAAAAeAAkAAQACAAEAAAAfAAkAAQACAAEAAAAgAAkAAQACAAEAAAAhAAkAAQACAAEAAAAiAAkAAQACAAEAAAAjAAkAAQACAAEAAAAkAAkAAQACAAEAAAAQAP7/AQACAAEAAAAQAP//AQACAAEAAAAQAAAAAQACAAEAAAAQAAEAAQACAAEAAAAQAAIAAQACAAEAAAAQAAMAAQACAAEAAAAQAAQAAQACAAEAAAAQAAUAAQACAAEAAAAQAAYAAQACAAEAAAAQAAcAAQACAAEAAAAQAAgAAQACAAEAAAARAP7/AQACAAEAAAARAP//AQACAAEAAAARAAAAAQACAAEAAAARAAEAAQACAAEAAAARAAIAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAARAAgAAQACAAEAAAASAP7/AQACAAEAAAASAP//AQACAAEAAAASAAAAAQACAAEAAAASAAEAAQACAAEAAAASAAIAAQACAAEAAAASAAMAAQACAAEAAAASAAQAAQACAAEAAAASAAUAAQACAAEAAAASAAYAAQACAAEAAAASAAcAAQACAAEAAAASAAgAAQACAAEAAAATAP7/AQACAAEAAAATAP//AQACAAEAAAATAAAAAQACAAEAAAATAAEAAQACAAEAAAATAAIAAQACAAEAAAATAAMAAQACAAEAAAATAAQAAQACAAEAAAATAAUAAQACAAEAAAATAAYAAQACAAEAAAATAAcAAQACAAEAAAATAAgAAQACAAEAAAAUAP7/AQACAAEAAAAUAP//AQACAAEAAAAUAAAAAQACAAEAAAAUAAEAAQACAAEAAAAUAAIAAQACAAEAAAAUAAMAAQACAAEAAAAUAAQAAQACAAEAAAAUAAUAAQACAAEAAAAUAAYAAQACAAEAAAAUAAcAAQACAAEAAAAUAAgAAQACAAEAAAAVAP7/AQACAAEAAAAVAP//AQACAAEAAAAVAAAAAQACAAEAAAAVAAEAAQACAAEAAAAVAAIAAQACAAEAAAAVAAMAAQACAAEAAAAVAAQAAQACAAEAAAAVAAUAAQACAAEAAAAVAAYAAQACAAEAAAAVAAcAAQACAAEAAAAVAAgAAQACAAEAAAAWAP7/AQACAAEAAAAWAP//AQACAAEAAAAWAAAAAQACAAEAAAAWAAEAAQACAAEAAAAWAAIAAQACAAEAAAAWAAMAAQACAAEAAAAWAAQAAQACAAEAAAAWAAUAAQACAAEAAAAWAAYAAQACAAEAAAAWAAcAAQACAAEAAAAWAAgAAQACAAEAAAAXAP7/AQACAAEAAAAXAP//AQACAAEAAAAXAAAAAQACAAEAAAAXAAEAAQACAAEAAAAXAAIAAQACAAEAAAAXAAMAAQACAAEAAAAXAAQAAQACAAEAAAAXAAUAAQACAAEAAAAXAAYAAQACAAEAAAAXAAcAAQACAAEAAAAXAAgAAQACAAEAAAAYAP7/AQACAAEAAAAYAP//AQACAAEAAAAYAAAAAQACAAEAAAAYAAEAAQACAAEAAAAYAAIAAQACAAEAAAAYAAMAAQACAAEAAAAYAAQAAQACAAEAAAAYAAUAAQACAAEAAAAYAAYAAQACAAEAAAAYAAcAAQACAAEAAAAYAAgAAQACAAEAAAAZAP7/AQACAAEAAAAZAP//AQACAAEAAAAZAAAAAQACAAEAAAAZAAEAAQACAAEAAAAZAAIAAQACAAEAAAAZAAMAAQACAAEAAAAZAAQAAQACAAEAAAAZAAUAAQACAAEAAAAZAAYAAQACAAEAAAAZAAcAAQACAAEAAAAZAAgAAQACAAEAAAAaAP7/AQACAAEAAAAaAP//AQACAAEAAAAaAAAAAQACAAEAAAAaAAEAAQACAAEAAAAaAAIAAQACAAEAAAAaAAMAAQACAAEAAAAaAAQAAQACAAEAAAAaAAUAAQACAAEAAAAaAAYAAQACAAEAAAAaAAcAAQACAAEAAAAaAAgAAQACAAEAAAAbAP7/AQACAAEAAAAbAP//AQACAAEAAAAbAAAAAQACAAEAAAAbAAEAAQACAAEAAAAbAAIAAQACAAEAAAAbAAMAAQACAAEAAAAbAAQAAQACAAEAAAAbAAUAAQACAAEAAAAbAAYAAQACAAEAAAAbAAcAAQACAAEAAAAbAAgAAQACAAEAAAAcAP7/AQACAAEAAAAcAP//AQACAAEAAAAcAAAAAQACAAEAAAAcAAEAAQACAAEAAAAcAAIAAQACAAEAAAAcAAMAAQACAAEAAAAcAAQAAQACAAEAAAAcAAUAAQACAAEAAAAcAAYAAQACAAEAAAAcAAcAAQACAAEAAAAcAAgAAQACAAEAAAAdAP7/AQACAAEAAAAdAP//AQACAAEAAAAdAAAAAQACAAEAAAAdAAEAAQACAAEAAAAdAAIAAQACAAEAAAAdAAMAAQACAAEAAAAdAAQAAQACAAEAAAAdAAUAAQACAAEAAAAdAAYAAQACAAEAAAAdAAcAAQACAAEAAAAdAAgAAQACAAEAAAAeAP7/AQACAAEAAAAeAP//AQACAAEAAAAeAAAAAQACAAEAAAAeAAEAAQACAAEAAAAeAAIAAQACAAEAAAAeAAMAAQACAAEAAAAeAAQAAQACAAEAAAAeAAUAAQACAAEAAAAeAAYAAQACAAEAAAAeAAcAAQACAAEAAAAeAAgAAQACAAEAAAAfAP7/AQACAAEAAAAfAP//AQACAAEAAAAfAAAAAQACAAEAAAAfAAEAAQACAAEAAAAfAAIAAQACAAEAAAAfAAMAAQACAAEAAAAfAAQAAQACAAEAAAAfAAUAAQACAAEAAAAfAAYAAQACAAEAAAAfAAcAAQACAAEAAAAfAAgAAQACAAEAAAAgAP7/AQACAAEAAAAgAP//AQACAAEAAAAgAAAAAQACAAEAAAAgAAEAAQACAAEAAAAgAAIAAQACAAEAAAAgAAMAAQACAAEAAAAgAAQAAQACAAEAAAAgAAUAAQACAAEAAAAgAAYAAQACAAEAAAAgAAcAAQACAAEAAAAgAAgAAQACAAEAAAAhAP7/AQACAAEAAAAhAP//AQACAAEAAAAhAAAAAQACAAEAAAAhAAEAAQACAAEAAAAhAAIAAQACAAEAAAAhAAMAAQACAAEAAAAhAAQAAQACAAEAAAAhAAUAAQACAAEAAAAhAAYAAQACAAEAAAAhAAcAAQACAAEAAAAhAAgAAQACAAEAAAAiAP7/AQACAAEAAAAiAP//AQACAAEAAAAiAAAAAQACAAEAAAAiAAEAAQACAAEAAAAiAAIAAQACAAEAAAAiAAMAAQACAAEAAAAiAAQAAQACAAEAAAAiAAUAAQACAAEAAAAiAAYAAQACAAEAAAAiAAcAAQACAAEAAAAiAAgAAQACAAEAAAAjAP7/AQACAAEAAAAjAP//AQACAAEAAAAjAAAAAQACAAEAAAAjAAEAAQACAAEAAAAjAAIAAQACAAEAAAAjAAMAAQACAAEAAAAjAAQAAQACAAEAAAAjAAUAAQACAAEAAAAjAAYAAQACAAEAAAAjAAcAAQACAAEAAAAjAAgAAQACAAEAAAAkAP7/AQACAAEAAAAkAP//AQACAAEAAAAkAAAAAQACAAEAAAAkAAEAAQACAAEAAAAkAAIAAQACAAEAAAAkAAMAAQACAAEAAAAkAAQAAQACAAEAAAAkAAUAAQACAAEAAAAkAAYAAQACAAEAAAAkAAcAAQACAAEAAAAkAAgAAQACAAEAAAAOAPr/AQACAAEAAAAOAPv/AQACAAEAAAAOAPz/AQACAAEAAAAOAP3/AQACAAEAAAAOAP7/AQACAAEAAAAOAP//AQACAAEAAAAOAAAAAQACAAEAAAAOAAEAAQACAAEAAAAOAAIAAQACAAEAAAAOAAMAAQACAAEAAAAOAAQAAQACAAEAAAAOAAUAAQACAAEAAAAOAAYAAQACAAEAAAAOAAcAAQACAAEAAAAOAAgAAQACAAEAAAAOAAkAAQACAAEAAAAOAAoAAQACAAEAAAAOAPn/AQACAAEAAAAPAPn/AQACAAEAAAAQAPn/AQACAAEAAAARAPn/AQACAAEAAAASAPn/AQACAAEAAAATAPn/AQACAAEAAAAUAPn/AQACAAEAAAAVAPn/AQACAAEAAAAWAPn/AQACAAEAAAAXAPn/AQACAAEAAAAYAPn/AQACAAEAAAAZAPn/AQACAAEAAAAaAPn/AQACAAEAAAAbAPn/AQACAAEAAAAcAPn/AQACAAEAAAAdAPn/AQACAAEAAAAeAPn/AQACAAEAAAAfAPn/AQACAAEAAAAgAPn/AQACAAEAAAAhAPn/AQACAAEAAAAiAPn/AQACAAEAAAAjAPn/AQACAAEAAAAkAPn/AQACAAEAAAAlAPn/AQACAAEAAAAOAAsAAQACAAEAAAAPAAsAAQACAAEAAAAQAAsAAQACAAEAAAARAAsAAQACAAEAAAASAAsAAQACAAEAAAATAAsAAQACAAEAAAAUAAsAAQACAAEAAAAVAAsAAQACAAEAAAAWAAsAAQACAAEAAAAXAAsAAQACAAEAAAAYAAsAAQACAAEAAAAZAAsAAQACAAEAAAAaAAsAAQACAAEAAAAbAAsAAQACAAEAAAAcAAsAAQACAAEAAAAdAAsAAQACAAEAAAAeAAsAAQACAAEAAAAfAAsAAQACAAEAAAAgAAsAAQACAAEAAAAhAAsAAQACAAEAAAAiAAsAAQACAAEAAAAjAAsAAQACAAEAAAAkAAsAAQACAAEAAAAlAAsAAQACAAEAAAAMAPn/AQACAAEAAAAMAPr/AQACAAEAAAAMAPv/AQACAAEAAAAMAPz/AQACAAEAAAAMAP3/AQACAAEAAAAMAP7/AQACAAEAAAAMAP//AQACAAEAAAAMAAAAAQACAAEAAAAMAAEAAQACAAEAAAAMAAIAAQACAAEAAAAMAAMAAQACAAEAAAAMAAQAAQACAAEAAAAMAAUAAQACAAEAAAAMAAYAAQACAAEAAAAMAAcAAQACAAEAAAAMAAgAAQACAAEAAAAMAAkAAQACAAEAAAAMAAoAAQACAAEAAAAMAAsAAQACAAEAAAANAPn/AQACAAEAAAANAPr/AQACAAEAAAANAPv/AQACAAEAAAANAPz/AQACAAEAAAANAP3/AQACAAEAAAANAP7/AQACAAEAAAANAP//AQACAAEAAAANAAAAAQACAAEAAAANAAEAAQACAAEAAAANAAIAAQACAAEAAAANAAMAAQACAAEAAAANAAQAAQACAAEAAAANAAUAAQACAAEAAAANAAYAAQACAAEAAAANAAcAAQACAAEAAAANAAgAAQACAAEAAAANAAkAAQACAAEAAAANAAoAAQACAAEAAAANAAsAAQACAAEAAAAmAPn/AQACAAEAAAAmAPr/AQACAAEAAAAmAPv/AQACAAEAAAAmAPz/AQACAAEAAAAmAP3/AQACAAEAAAAmAP7/AQACAAEAAAAmAAcAAQACAAEAAAAmAAgAAQACAAEAAAAmAAkAAQACAAEAAAAmAAoAAQACAAEAAAAmAAsAAQACAAEAAAAnAPn/AQACAAEAAAAnAPr/AQACAAEAAAAnAPv/AQACAAEAAAAnAPz/AQACAAEAAAAnAP3/AQACAAEAAAAnAP7/AQACAAEAAAAnAAcAAQACAAEAAAAnAAgAAQACAAEAAAAnAAkAAQACAAEAAAAnAAoAAQACAAEAAAAnAAsAAQACAAEAAAAoAPn/AQACAAEAAAAoAPr/AQACAAEAAAAoAPv/AQACAAEAAAAoAPz/AQACAAEAAAAoAP3/AQACAAEAAAAoAP7/AQACAAEAAAAoAAcAAQACAAEAAAAoAAgAAQACAAEAAAAoAAkAAQACAAEAAAAoAAoAAQACAAEAAAAoAAsAAQACAAEAAAA=")
tile_set = ExtResource("4_qlxro")

[node name="baseOverlay" type="TileMapLayer" parent="." groups=["navigation"]]
tile_set = ExtResource("5_un4pn")

[node name="object" type="TileMapLayer" parent="." groups=["navigation"]]
light_mask = 2
z_index = 1
tile_set = ExtResource("6_kxf7d")

[node name="undefeated_upper" type="TileMapLayer" parent="." groups=["navigation"]]
tile_map_data = PackedByteArray("AAAlAPr/AQAFAAQAAAAlAPv/AQADAAEAAAAlAPz/AQADAAEAAAAlAP3/AQADAAEAAAAlAAcAAQADAAEAAAAlAAgAAQADAAEAAAAlAAkAAQADAAEAAAAmAP7/AQAAAAQAAAAnAP7/AQAEAAEAAAAoAP7/AQAEAAEAAAAmAAYAAQAAAAQAAAAnAAYAAQAEAAEAAAAoAAYAAQAEAAEAAAAlAP7/AQADAAIAAAAmAAcAAQAEAAEAAAAmAAgAAQAEAAEAAAAmAAkAAQAEAAEAAAAnAAcAAQAEAAEAAAAnAAgAAQAEAAEAAAAnAAkAAQAEAAEAAAAoAAcAAQAEAAEAAAAoAAgAAQAEAAEAAAAoAAkAAQAEAAEAAAAmAPr/AQAEAAEAAAAmAPv/AQAEAAEAAAAmAPz/AQAEAAEAAAAmAP3/AQAEAAEAAAAnAPr/AQAEAAEAAAAnAPv/AQAEAAEAAAAnAPz/AQAEAAEAAAAnAP3/AQAEAAEAAAAoAPr/AQAEAAEAAAAoAPv/AQAEAAEAAAAoAPz/AQAEAAEAAAAoAP3/AQAEAAEAAAAPAPr/AQAEAAIAAAAQAPr/AQAEAAIAAAARAPr/AQAEAAIAAAASAPr/AQAEAAIAAAATAPr/AQAEAAIAAAAUAPr/AQAEAAIAAAAVAPr/AQAEAAIAAAAWAPr/AQAEAAIAAAAXAPr/AQAEAAIAAAAYAPr/AQAEAAIAAAAZAPr/AQAEAAIAAAAaAPr/AQAEAAIAAAAbAPr/AQAEAAIAAAAcAPr/AQAEAAIAAAAdAPr/AQAEAAIAAAAeAPr/AQAEAAIAAAAfAPr/AQAEAAIAAAAgAPr/AQAEAAIAAAAhAPr/AQAEAAIAAAAiAPr/AQAEAAIAAAAjAPr/AQAEAAIAAAAkAPr/AQAEAAIAAAAlAAYAAQADAAAAAAALAPr/AQAEAAEAAAALAPv/AQAEAAEAAAALAPz/AQAEAAEAAAALAP3/AQAEAAEAAAALAP7/AQAEAAEAAAALAP//AQAEAAEAAAALAAAAAQAEAAEAAAALAAEAAQAEAAEAAAALAAIAAQAEAAEAAAALAAMAAQAEAAEAAAALAAQAAQAEAAEAAAALAAUAAQAEAAEAAAALAAYAAQAEAAEAAAALAAcAAQAEAAEAAAALAAgAAQAEAAEAAAALAAkAAQAEAAEAAAAMAPr/AQAEAAEAAAAMAPv/AQAEAAEAAAAMAPz/AQAEAAEAAAAMAP3/AQAEAAEAAAAMAP7/AQAEAAEAAAAMAP//AQAEAAEAAAAMAAAAAQAEAAEAAAAMAAEAAQAEAAEAAAAMAAIAAQAEAAEAAAAMAAMAAQAEAAEAAAAMAAQAAQAEAAEAAAAMAAUAAQAEAAEAAAAMAAYAAQAEAAEAAAAMAAcAAQAEAAEAAAAMAAgAAQAEAAEAAAAMAAkAAQAEAAEAAAANAPr/AQAEAAEAAAANAPv/AQAEAAEAAAANAPz/AQAEAAEAAAANAP3/AQAEAAEAAAANAP7/AQAEAAEAAAANAP//AQAEAAEAAAANAAAAAQAEAAEAAAANAAEAAQAEAAEAAAANAAIAAQAEAAEAAAANAAMAAQAEAAEAAAANAAQAAQAEAAEAAAANAAUAAQAEAAEAAAANAAYAAQAEAAEAAAANAAcAAQAEAAEAAAANAAgAAQAEAAEAAAANAAkAAQAEAAEAAAAOAPr/AQAEAAQAAAAOAPv/AQAFAAEAAAAOAPz/AQAFAAEAAAAOAP3/AQAFAAEAAAAOAP7/AQAFAAEAAAAOAP//AQAFAAEAAAAOAAAAAQAFAAEAAAAOAAEAAQAFAAEAAAAOAAIAAQAFAAEAAAAOAAMAAQAFAAEAAAAOAAQAAQAFAAEAAAAOAAUAAQAFAAEAAAAOAAYAAQAFAAEAAAAOAAcAAQAFAAEAAAAOAAgAAQAFAAEAAAAOAAkAAQAFAAEAAAALAAoAAQAEAAEAAAALAAsAAQAEAAEAAAALAAwAAQAEAAEAAAAMAAoAAQAEAAEAAAAMAAsAAQAEAAEAAAAMAAwAAQAEAAEAAAANAAoAAQAEAAEAAAANAAsAAQAEAAEAAAANAAwAAQAEAAEAAAAOAAoAAQAEAAUAAAAOAAsAAQAEAAEAAAAOAAwAAQAEAAEAAAAPAAoAAQAEAAAAAAAPAAsAAQAEAAEAAAAPAAwAAQAEAAEAAAAQAAoAAQAEAAAAAAAQAAsAAQAEAAEAAAAQAAwAAQAEAAEAAAARAAoAAQAEAAAAAAARAAsAAQAEAAEAAAARAAwAAQAEAAEAAAASAAoAAQAEAAAAAAASAAsAAQAEAAEAAAASAAwAAQAEAAEAAAATAAoAAQAEAAAAAAATAAsAAQAEAAEAAAATAAwAAQAEAAEAAAAUAAoAAQAEAAAAAAAUAAsAAQAEAAEAAAAUAAwAAQAEAAEAAAAVAAoAAQAEAAAAAAAVAAsAAQAEAAEAAAAVAAwAAQAEAAEAAAAWAAoAAQAEAAAAAAAWAAsAAQAEAAEAAAAWAAwAAQAEAAEAAAAXAAoAAQAEAAAAAAAXAAsAAQAEAAEAAAAXAAwAAQAEAAEAAAAYAAoAAQAEAAAAAAAYAAsAAQAEAAEAAAAYAAwAAQAEAAEAAAAZAAoAAQAEAAAAAAAZAAsAAQAEAAEAAAAZAAwAAQAEAAEAAAAaAAoAAQAEAAAAAAAaAAsAAQAEAAEAAAAaAAwAAQAEAAEAAAAbAAoAAQAEAAAAAAAbAAsAAQAEAAEAAAAbAAwAAQAEAAEAAAAcAAoAAQAEAAAAAAAcAAsAAQAEAAEAAAAcAAwAAQAEAAEAAAAdAAoAAQAEAAAAAAAdAAsAAQAEAAEAAAAdAAwAAQAEAAEAAAAeAAoAAQAEAAAAAAAeAAsAAQAEAAEAAAAeAAwAAQAEAAEAAAAfAAoAAQAEAAAAAAAfAAsAAQAEAAEAAAAfAAwAAQAEAAEAAAAgAAoAAQAEAAAAAAAgAAsAAQAEAAEAAAAgAAwAAQAEAAEAAAAhAAoAAQAEAAAAAAAhAAsAAQAEAAEAAAAhAAwAAQAEAAEAAAAiAAoAAQAEAAAAAAAiAAsAAQAEAAEAAAAiAAwAAQAEAAEAAAAjAAoAAQAEAAAAAAAjAAsAAQAEAAEAAAAjAAwAAQAEAAEAAAAkAAoAAQAEAAAAAAAkAAsAAQAEAAEAAAAkAAwAAQAEAAEAAAAlAAoAAQAFAAUAAAAlAAsAAQAEAAEAAAAlAAwAAQAEAAEAAAAmAAoAAQAEAAEAAAAmAAsAAQAEAAEAAAAmAAwAAQAEAAEAAAAnAAoAAQAEAAEAAAAnAAsAAQAEAAEAAAAnAAwAAQAEAAEAAAAoAAoAAQAEAAEAAAAoAAsAAQAEAAEAAAAoAAwAAQAEAAEAAAALAPj/AQAEAAEAAAALAPn/AQAEAAEAAAAMAPj/AQAEAAEAAAAMAPn/AQAEAAEAAAANAPj/AQAEAAEAAAANAPn/AQAEAAEAAAAOAPj/AQAEAAEAAAAOAPn/AQAEAAEAAAAPAPj/AQAEAAEAAAAPAPn/AQAEAAEAAAAQAPj/AQAEAAEAAAAQAPn/AQAEAAEAAAARAPj/AQAEAAEAAAARAPn/AQAEAAEAAAASAPj/AQAEAAEAAAASAPn/AQAEAAEAAAATAPj/AQAEAAEAAAATAPn/AQAEAAEAAAAUAPj/AQAEAAEAAAAUAPn/AQAEAAEAAAAVAPj/AQAEAAEAAAAVAPn/AQAEAAEAAAAWAPj/AQAEAAEAAAAWAPn/AQAEAAEAAAAXAPj/AQAEAAEAAAAXAPn/AQAEAAEAAAAYAPj/AQAEAAEAAAAYAPn/AQAEAAEAAAAZAPj/AQAEAAEAAAAZAPn/AQAEAAEAAAAaAPj/AQAEAAEAAAAaAPn/AQAEAAEAAAAbAPj/AQAEAAEAAAAbAPn/AQAEAAEAAAAcAPj/AQAEAAEAAAAcAPn/AQAEAAEAAAAdAPj/AQAEAAEAAAAdAPn/AQAEAAEAAAAeAPj/AQAEAAEAAAAeAPn/AQAEAAEAAAAfAPj/AQAEAAEAAAAfAPn/AQAEAAEAAAAgAPj/AQAEAAEAAAAgAPn/AQAEAAEAAAAhAPj/AQAEAAEAAAAhAPn/AQAEAAEAAAAiAPj/AQAEAAEAAAAiAPn/AQAEAAEAAAAjAPj/AQAEAAEAAAAjAPn/AQAEAAEAAAAkAPj/AQAEAAEAAAAkAPn/AQAEAAEAAAAlAPj/AQAEAAEAAAAlAPn/AQAEAAEAAAAmAPj/AQAEAAEAAAAmAPn/AQAEAAEAAAAnAPj/AQAEAAEAAAAnAPn/AQAEAAEAAAAoAPj/AQAEAAEAAAAoAPn/AQAEAAEAAAAmAP//AQADAAEAAAAmAAAAAQADAAEAAAAmAAEAAQADAAEAAAAmAAIAAQADAAEAAAAmAAMAAQADAAEAAAAmAAQAAQADAAEAAAAmAAUAAQADAAEAAAAnAP//AQAEAAEAAAAnAAAAAQAEAAEAAAAnAAEAAQAEAAEAAAAnAAIAAQAEAAEAAAAnAAMAAQAEAAEAAAAnAAQAAQAEAAEAAAAnAAUAAQAEAAEAAAAoAP//AQAEAAEAAAAoAAAAAQAEAAEAAAAoAAEAAQAEAAEAAAAoAAIAAQAEAAEAAAAoAAMAAQAEAAEAAAAoAAQAAQAEAAEAAAAoAAUAAQAEAAEAAAA=")
tile_set = ExtResource("7_8rs3m")

[node name="defeated_upper" type="TileMapLayer" parent="." groups=["navigation"]]
tile_map_data = PackedByteArray("AAAlAPr/AQAFAAQAAAAlAPv/AQADAAEAAAAlAPz/AQADAAEAAAAlAP3/AQADAAEAAAAlAAcAAQADAAEAAAAlAAgAAQADAAEAAAAlAAkAAQADAAEAAAAmAP7/AQAEAAIAAAAnAP7/AQAEAAIAAAAoAP7/AQAEAAIAAAAmAAYAAQAEAAAAAAAnAAYAAQAEAAAAAAAoAAYAAQAEAAAAAAAlAP7/AQADAAIAAAAmAAcAAQAEAAEAAAAmAAgAAQAEAAEAAAAmAAkAAQAEAAEAAAAnAAcAAQAEAAEAAAAnAAgAAQAEAAEAAAAnAAkAAQAEAAEAAAAoAAcAAQAEAAEAAAAoAAgAAQAEAAEAAAAoAAkAAQAEAAEAAAAmAPr/AQAEAAEAAAAmAPv/AQAEAAEAAAAmAPz/AQAEAAEAAAAmAP3/AQAEAAEAAAAnAPr/AQAEAAEAAAAnAPv/AQAEAAEAAAAnAPz/AQAEAAEAAAAnAP3/AQAEAAEAAAAoAPr/AQAEAAEAAAAoAPv/AQAEAAEAAAAoAPz/AQAEAAEAAAAoAP3/AQAEAAEAAAAPAPr/AQAEAAIAAAAQAPr/AQAEAAIAAAARAPr/AQAEAAIAAAASAPr/AQAEAAIAAAATAPr/AQAEAAIAAAAUAPr/AQAEAAIAAAAVAPr/AQAEAAIAAAAWAPr/AQAEAAIAAAAXAPr/AQAEAAIAAAAYAPr/AQAEAAIAAAAZAPr/AQAEAAIAAAAaAPr/AQAEAAIAAAAbAPr/AQAEAAIAAAAcAPr/AQAEAAIAAAAdAPr/AQAEAAIAAAAeAPr/AQAEAAIAAAAfAPr/AQAEAAIAAAAgAPr/AQAEAAIAAAAhAPr/AQAEAAIAAAAiAPr/AQAEAAIAAAAjAPr/AQAEAAIAAAAkAPr/AQAEAAIAAAAlAAYAAQADAAAAAAALAPr/AQAEAAEAAAALAPv/AQAEAAEAAAALAPz/AQAEAAEAAAALAP3/AQAEAAEAAAALAP7/AQAEAAIAAAALAAYAAQAEAAAAAAALAAcAAQAEAAEAAAALAAgAAQAEAAEAAAALAAkAAQAEAAEAAAAMAPr/AQAEAAEAAAAMAPv/AQAEAAEAAAAMAPz/AQAEAAEAAAAMAP3/AQAEAAEAAAAMAP7/AQAEAAIAAAAMAAYAAQAEAAAAAAAMAAcAAQAEAAEAAAAMAAgAAQAEAAEAAAAMAAkAAQAEAAEAAAANAPr/AQAEAAEAAAANAPv/AQAEAAEAAAANAPz/AQAEAAEAAAANAP3/AQAEAAEAAAANAP7/AQAEAAIAAAANAAYAAQAEAAAAAAANAAcAAQAEAAEAAAANAAgAAQAEAAEAAAANAAkAAQAEAAEAAAAOAPr/AQAEAAQAAAAOAPv/AQAFAAEAAAAOAPz/AQAFAAEAAAAOAP3/AQAFAAEAAAAOAP7/AQAFAAIAAAAOAAYAAQAFAAAAAAAOAAcAAQAFAAEAAAAOAAgAAQAFAAEAAAAOAAkAAQAFAAEAAAALAAoAAQAEAAEAAAALAAsAAQAEAAEAAAALAAwAAQAEAAEAAAAMAAoAAQAEAAEAAAAMAAsAAQAEAAEAAAAMAAwAAQAEAAEAAAANAAoAAQAEAAEAAAANAAsAAQAEAAEAAAANAAwAAQAEAAEAAAAOAAoAAQAEAAUAAAAOAAsAAQAEAAEAAAAOAAwAAQAEAAEAAAAPAAoAAQAEAAAAAAAPAAsAAQAEAAEAAAAPAAwAAQAEAAEAAAAQAAoAAQAEAAAAAAAQAAsAAQAEAAEAAAAQAAwAAQAEAAEAAAARAAoAAQAEAAAAAAARAAsAAQAEAAEAAAARAAwAAQAEAAEAAAASAAoAAQAEAAAAAAASAAsAAQAEAAEAAAASAAwAAQAEAAEAAAATAAoAAQAEAAAAAAATAAsAAQAEAAEAAAATAAwAAQAEAAEAAAAUAAoAAQAEAAAAAAAUAAsAAQAEAAEAAAAUAAwAAQAEAAEAAAAVAAoAAQAEAAAAAAAVAAsAAQAEAAEAAAAVAAwAAQAEAAEAAAAWAAoAAQAEAAAAAAAWAAsAAQAEAAEAAAAWAAwAAQAEAAEAAAAXAAoAAQAEAAAAAAAXAAsAAQAEAAEAAAAXAAwAAQAEAAEAAAAYAAoAAQAEAAAAAAAYAAsAAQAEAAEAAAAYAAwAAQAEAAEAAAAZAAoAAQAEAAAAAAAZAAsAAQAEAAEAAAAZAAwAAQAEAAEAAAAaAAoAAQAEAAAAAAAaAAsAAQAEAAEAAAAaAAwAAQAEAAEAAAAbAAoAAQAEAAAAAAAbAAsAAQAEAAEAAAAbAAwAAQAEAAEAAAAcAAoAAQAEAAAAAAAcAAsAAQAEAAEAAAAcAAwAAQAEAAEAAAAdAAoAAQAEAAAAAAAdAAsAAQAEAAEAAAAdAAwAAQAEAAEAAAAeAAoAAQAEAAAAAAAeAAsAAQAEAAEAAAAeAAwAAQAEAAEAAAAfAAoAAQAEAAAAAAAfAAsAAQAEAAEAAAAfAAwAAQAEAAEAAAAgAAoAAQAEAAAAAAAgAAsAAQAEAAEAAAAgAAwAAQAEAAEAAAAhAAoAAQAEAAAAAAAhAAsAAQAEAAEAAAAhAAwAAQAEAAEAAAAiAAoAAQAEAAAAAAAiAAsAAQAEAAEAAAAiAAwAAQAEAAEAAAAjAAoAAQAEAAAAAAAjAAsAAQAEAAEAAAAjAAwAAQAEAAEAAAAkAAoAAQAEAAAAAAAkAAsAAQAEAAEAAAAkAAwAAQAEAAEAAAAlAAoAAQAFAAUAAAAlAAsAAQAEAAEAAAAlAAwAAQAEAAEAAAAmAAoAAQAEAAEAAAAmAAsAAQAEAAEAAAAmAAwAAQAEAAEAAAAnAAoAAQAEAAEAAAAnAAsAAQAEAAEAAAAnAAwAAQAEAAEAAAAoAAoAAQAEAAEAAAAoAAsAAQAEAAEAAAAoAAwAAQAEAAEAAAALAPj/AQAEAAEAAAALAPn/AQAEAAEAAAAMAPj/AQAEAAEAAAAMAPn/AQAEAAEAAAANAPj/AQAEAAEAAAANAPn/AQAEAAEAAAAOAPj/AQAEAAEAAAAOAPn/AQAEAAEAAAAPAPj/AQAEAAEAAAAPAPn/AQAEAAEAAAAQAPj/AQAEAAEAAAAQAPn/AQAEAAEAAAARAPj/AQAEAAEAAAARAPn/AQAEAAEAAAASAPj/AQAEAAEAAAASAPn/AQAEAAEAAAATAPj/AQAEAAEAAAATAPn/AQAEAAEAAAAUAPj/AQAEAAEAAAAUAPn/AQAEAAEAAAAVAPj/AQAEAAEAAAAVAPn/AQAEAAEAAAAWAPj/AQAEAAEAAAAWAPn/AQAEAAEAAAAXAPj/AQAEAAEAAAAXAPn/AQAEAAEAAAAYAPj/AQAEAAEAAAAYAPn/AQAEAAEAAAAZAPj/AQAEAAEAAAAZAPn/AQAEAAEAAAAaAPj/AQAEAAEAAAAaAPn/AQAEAAEAAAAbAPj/AQAEAAEAAAAbAPn/AQAEAAEAAAAcAPj/AQAEAAEAAAAcAPn/AQAEAAEAAAAdAPj/AQAEAAEAAAAdAPn/AQAEAAEAAAAeAPj/AQAEAAEAAAAeAPn/AQAEAAEAAAAfAPj/AQAEAAEAAAAfAPn/AQAEAAEAAAAgAPj/AQAEAAEAAAAgAPn/AQAEAAEAAAAhAPj/AQAEAAEAAAAhAPn/AQAEAAEAAAAiAPj/AQAEAAEAAAAiAPn/AQAEAAEAAAAjAPj/AQAEAAEAAAAjAPn/AQAEAAEAAAAkAPj/AQAEAAEAAAAkAPn/AQAEAAEAAAAlAPj/AQAEAAEAAAAlAPn/AQAEAAEAAAAmAPj/AQAEAAEAAAAmAPn/AQAEAAEAAAAnAPj/AQAEAAEAAAAnAPn/AQAEAAEAAAAoAPj/AQAEAAEAAAAoAPn/AQAEAAEAAAA=")
tile_set = ExtResource("7_8rs3m")

[node name="spawnpoint" type="Node2D" parent="."]
position = Vector2(582, 35)

[node name="Sprite2D" type="Sprite2D" parent="spawnpoint"]
texture = ExtResource("8_8567w")

[node name="spawnpoint2" type="Node2D" parent="."]
position = Vector2(246, 35)

[node name="Sprite2D" type="Sprite2D" parent="spawnpoint2"]
texture = ExtResource("9_2nrtd")

[node name="exitpoint" type="Area2D" parent="."]
position = Vector2(642, 46)

[node name="Sprite2D" type="Sprite2D" parent="exitpoint"]
texture = ExtResource("11_r0mky")

[node name="CollisionShape2D" type="CollisionShape2D" parent="exitpoint"]
shape = SubResource("RectangleShape2D_h04wm")

[node name="exitpoint2" type="Area2D" parent="."]
position = Vector2(193, 46)

[node name="Sprite2D" type="Sprite2D" parent="exitpoint2"]
texture = ExtResource("10_s5bqf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="exitpoint2"]
shape = SubResource("RectangleShape2D_h04wm")

[node name="IceTorch" parent="." instance=ExtResource("13_n3s17")]
position = Vector2(221, -113)

[node name="IceTorch2" parent="." instance=ExtResource("13_n3s17")]
position = Vector2(610, -106)

[node name="IceTorch3" parent="." instance=ExtResource("13_n3s17")]
position = Vector2(224, 159)

[node name="IceTorch4" parent="." instance=ExtResource("13_n3s17")]
position = Vector2(612, 163)

[node name="arena_box" type="Area2D" parent="." node_paths=PackedStringArray("collision_shape")]
position = Vector2(416, 39)
script = ExtResource("11_2nrtd")
collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="arena_box"]
modulate = Color(0.56733334, 0.92, 0, 1)
shape = SubResource("RectangleShape2D_gx3pl")
debug_color = Color(0.56733334, 0.92, 0, 0)
